# Module_3_Yuyan

./: .gitignore  .pre-commit-config.yaml  README.md  SYLLABUS.md  pyproject.toml
day1/: README.md  convert_to_py.py  download_geneturing.sh  gene_hop_openai_results.csv  gene_turing_results.csv  mlflow_hello_world.py  slurm-5312351.out  slurm-5312355.out  starter_geneturing.ipynb  starter_geneturing_openai.py
day1/mlruns/0/: meta.yaml
day1/mlruns/0/f918e033a9b14795bb0f0a4dd4443d9f/: meta.yaml
day1/mlruns/0/f918e033a9b14795bb0f0a4dd4443d9f/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
day1/resources/: HandyPlugins.md  MLFlowTracking.md  Nbconvert.md  PreCommitGuide.md  Pytest.md  PythonRepoGuide.md  how-to-setup-ollama-BioHPC.md  ollama-cheatsheet.md
day2/: README.md  download_geneturing.sh
day2/resources/: AltMetrics.md  AzureOpenAI.md  StructuredOutput.md
day3/: README.md
day3/resources/: gene-gpt-cheatsheet.md  llm-as-a-judge.md  ollama-function_calling-01.ipynb  openai-function-calling-02.ipynb
day4/: README.md
outputs/: gene_hop_openai_results.csv  gene_turing_openai_results.csv  genehop_no_ncbi_OpenAI_rawresults.json  judge_output.csv
project/: convert_to_py.py  gene_hop_no_ncbi.py  gene_hop_openai_results.csv  llm_judge.py  ncbi_info.py  starter_genehop_openai.py  starter_geneturing_openai.py  test_connect.py
